Added Connection String
Added Connection String

--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -1,10 +1,18 @@
 {
+  "ZuriDatabaseSettings": {
+    "UsersCollectionName": "Users",
+    "ConnectionString": "mongodb+srv://abisoyeola:beyourself@cluster0.s55iy.mongodb.net/zuri_tracker?retryWrites=true&w=majority",
+    "DatabaseName": "zuri_tracker"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "zuri_tracker_conn": "mongodb+srv://abisoyeola:beyourself@cluster0.s55iy.mongodb.net/zuri_tracker?retryWrites=true&w=majority"
+  }
 }
