--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,5 @@ jobs:
           script: |
             cd /var/www/zc_plugin_duty_shift_dotnet/App
             git pull
+            dotnet build
             sudo systemctl restart dotnet
