--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@heroicons/react": "^1.0.4",
     "bootstrap": "^4.1.3",
+    "craco": "0.0.3",
     "jquery": "^3.5.1",
     "merge": "^2.1.1",
     "oidc-client": "^1.9.0",
@@ -18,7 +19,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
     "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.7.1"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
@@ -31,7 +32,7 @@
     "eslint-plugin-react": "^7.18.3",
     "nan": "^2.14.1",
     "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14",
     "typescript": "^3.7.5"
   },
   "eslintConfig": {
