--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@heroicons/react": "^1.0.4",
+    "axios": "^0.21.4",
     "bootstrap": "^4.1.3",
     "craco": "0.0.3",
     "jquery": "^3.5.1",
